project(input): fixed input type submit on Safari IOS

--- a/blocks/root/normalize.css
+++ b/blocks/root/normalize.css
@@ -111,3 +111,9 @@ textarea,
 select {
     font: inherit;
 }
+
+input[type="submit"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
